--- a/_css/style.css
+++ b/_css/style.css
@@ -4,6 +4,8 @@
 	Date: May 2014
 */
 /* mixins for sass and css reset */
+/* ---------------------------------------- Mixins ---------------------------------------- */
+/* ------------------------------ Transition */
 /* ---------------------------------------- Reset ---------------------------------------- */
 blockquote, body, button, caption, cite, dd, dl, fieldset, form, h1, h2, h3, h4, h5, h6, hr,
 iframe, input, legend, li, ol, p, pre, select, tbody, td, textarea, tfoot, th, thead, tr, ul {
@@ -85,9 +87,65 @@ button {
 button:focus {
   outline: 0; }
 
-/* ---------------------------------------- Mixins ---------------------------------------- */
-/* ------------------------------ Transition */
 /* base styles */
+.swiper-container {
+  margin: 0 auto;
+  position: relative;
+  overflow: hidden;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
+  backface-visibility: hidden;
+  /* Fix of Webkit flickering */
+  z-index: 1; }
+
+.swiper-wrapper {
+  position: relative;
+  width: 100%;
+  -webkit-transition-property: -webkit-transform, left, top;
+  -webkit-transition-duration: 0s;
+  -webkit-transform: translate3d(0px, 0, 0);
+  -webkit-transition-timing-function: ease;
+  -moz-transition-property: -moz-transform, left, top;
+  -moz-transition-duration: 0s;
+  -moz-transform: translate3d(0px, 0, 0);
+  -moz-transition-timing-function: ease;
+  -o-transition-property: -o-transform, left, top;
+  -o-transition-duration: 0s;
+  -o-transform: translate3d(0px, 0, 0);
+  -o-transition-timing-function: ease;
+  -o-transform: translate(0px, 0px);
+  -ms-transition-property: -ms-transform, left, top;
+  -ms-transition-duration: 0s;
+  -ms-transform: translate3d(0px, 0, 0);
+  -ms-transition-timing-function: ease;
+  transition-property: transform, left, top;
+  transition-duration: 0s;
+  transform: translate3d(0px, 0, 0);
+  transition-timing-function: ease;
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box; }
+
+.swiper-free-mode > .swiper-wrapper {
+  -webkit-transition-timing-function: ease-out;
+  -moz-transition-timing-function: ease-out;
+  -ms-transition-timing-function: ease-out;
+  -o-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+  margin: 0 auto; }
+
+.swiper-slide {
+  float: left; }
+
+/* IE10 Windows Phone 8 Fixes */
+.swiper-wp8-horizontal {
+  -ms-touch-action: pan-y; }
+
+.swiper-wp8-vertical {
+  -ms-touch-action: pan-x; }
+
 /* ---------------------------------------- Site ---------------------------------------- */
 *,
 *::before,
@@ -108,14 +166,37 @@ body {
   /* 16px */
   line-height: 1.250;
   /* 20px */
-  height: 100%; }
+  height: 100%;
+  min-width: 960px; }
 
 /* ---------------------------------------- Grid ---------------------------------------- */
 /* ------------------------------ Wrapper */
 .wrapper {
   margin: 0 auto;
-  max-width: 1024px;
-  width: 100%; }
+  width: 960px; }
+
+/* modifiers */
+.wrapper.small {
+  width: 600px; }
+
+/* --------------------------- Rows */
+.row {
+  margin-left: -20px; }
+  .row:before, .row:after {
+    content: '';
+    display: table;
+    line-height: 0; }
+  .row:after {
+    clear: both; }
+
+/* --------------------------- Columns */
+[class*="col_"] {
+  float: left;
+  min-height: 1px;
+  padding-left: 20px; }
+
+.col_1_2 {
+  width: 50%; }
 
 /* ---------------------------------------- Base ---------------------------------------- */
 /* ------------------------------ Headings */
@@ -162,9 +243,8 @@ ul {
   list-style: none; }
 
 ul li {
-  background-image: url("data:image/svg+xml;charset=US-ASCII,%3C%21DOCTYPE%20svg%20PUBLIC%20%22-//W3C//DTD%20SVG%201.1//EN%22%20%22http%3A//www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd%22%20%5B%0D%0A%09%3C%21ENTITY%20ns_flows%20%22http%3A//ns.adobe.com/Flows/1.0/%22%3E%0D%0A%5D%3E%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%224%22%20height%3D%224%22%20viewBox%3D%220%200%204%204%22%3E%3Ccircle%20fill%3D%22%231F1F1F%22%20cx%3D%222%22%20cy%3D%222%22%20r%3D%222%22/%3E%3C/svg%3E");
-  background-repeat: no-repeat;
-  background-position: 0 8px;
+  background: no-repeat 0 8px;
+  background-image: url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20width%3D%224%22%20height%3D%224%22%20viewBox%3D%220%200%204%204%22%3E%3Ccircle%20fill%3D%22%231F1F1F%22%20cx%3D%222%22%20cy%3D%222%22%20r%3D%222%22/%3E%3C/svg%3E");
   margin: 0 0 10px;
   padding: 0 0 0 12px; }
 
@@ -208,21 +288,65 @@ ul li ol li {
 .list_inline li {
   float: left; }
 
+/* ---------------------------------------- Header ---------------------------------------- */
 header {
   border-bottom: 1px solid #000;
   padding: 20px; }
 
-/* Exhibition work */
-.exhibition_work {
-  max-width: 800px;
+/* ---------------------------------------- Components ---------------------------------------- */
+.fill_viewport {
+  height: 100%;
+  min-width: 960px;
   width: 100%; }
 
+.panel_container {
+  background: rgba(255, 255, 255, 0.7);
+  bottom: 0;
+  min-height: 50px;
+  left: 0;
+  padding-top: 50px;
+  position: absolute;
+  width: 100%;
+  z-index: 1; }
+
+.panel_toggle {
+  background-color: red;
+  height: 50px;
+  left: 50%;
+  margin-left: -50px;
+  position: absolute;
+  top: 0;
+  width: 100px; }
+
+.panel_content {
+  padding: 60px 0; }
+
+/* -------------------- Expander */
+[data-expander-content][aria-hidden="true"] {
+  display: none; }
+
+/* ---------------------------------------- Exhibition page ---------------------------------------- */
+.exhibition_content {
+  background-color: #fff;
+  min-height: 100%;
+  padding: 60px 0;
+  position: relative;
+  width: 100%;
+  z-index: 1; }
+
+/* Exhibition work */
+.exhibition_work {
+  width: 800px; }
+
 .exhibition_work li {
-  padding: 0 10px 20px;
   width: 33.333333%; }
 
 .exhibition_work a {
   display: block;
+  padding: 10px; }
+
+.exhibition_work img {
+  opacity: 1;
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
   backface-visibility: hidden;
@@ -231,17 +355,103 @@ header {
   -o-transition: opacity 150ms ease-out;
   transition: opacity 150ms ease-out; }
 
-.exhibition_work img {
-  opacity: 1; }
+.exhibition_work.is_active img {
+  opacity: 0.6; }
 
 .exhibition_work a:hover img,
 .exhibition_work a:focus img {
-  opacity: 0.7; }
+  opacity: 1 !important; }
 
 /* Exhibition name */
 .exhibition_name {
   left: 20px;
   position: fixed;
   top: 20px; }
+
+/* Exhibition hero */
+.exhibition_hero {
+  background: gray no-repeat center;
+  display: table; }
+
+.exhibition_hero_container {
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle; }
+
+.hero_caption {
+  margin: 0 auto;
+  max-width: 600px; }
+
+.hero_caption p {
+  margin-bottom: 0; }
+
+.exhibition_hero_scroll {
+  background: red;
+  display: block;
+  bottom: 0;
+  height: 50px;
+  left: 50%;
+  margin-left: -25px;
+  overflow: hidden;
+  position: fixed;
+  text-indent: 100%;
+  width: 50px;
+  white-space: nowrap; }
+
+/* ---------------------------------------- Carousel ---------------------------------------- */
+.carousel {
+  height: 660px;
+  left: 0;
+  margin-top: -330px;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%; }
+
+.swiper-container {
+  height: 600px;
+  margin-bottom: 30px;
+  width: 100%; }
+
+.swiper-slide::before {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  margin-right: -0.25em; }
+
+.swiper-slide img {
+  display: inline-block;
+  max-height: 600px;
+  max-width: 800px;
+  vertical-align: middle; }
+
+.swiper-pagination {
+  display: inline-block; }
+
+.swiper-pagination .swiper-pagination-switch {
+  background-color: red;
+  cursor: pointer;
+  display: block;
+  height: 30px;
+  margin: 0 10px;
+  width: 30px; }
+
+.swiper-pagination .swiper-active-switch {
+  background-color: green; }
+
+[class*="swiper-direction"] {
+  background-color: red;
+  left: 0;
+  height: 50px;
+  margin-top: -25px;
+  position: fixed;
+  top: 50%;
+  width: 50px;
+  z-index: 2; }
+
+.swiper-direction-next {
+  left: auto;
+  right: 0; }
 
 /* OOCSS and utilities */
