--- a/_css/style.css
+++ b/_css/style.css
@@ -281,7 +281,7 @@ a {
     content: '';
     height: 6px;
     position: absolute;
-    bottom: 0;
+    bottom: -4px;
     left: 0;
     width: 100%; }
 
@@ -353,14 +353,14 @@ ul li ol li {
 /* ---------------------------------------- Header ---------------------------------------- */
 header {
   background-color: #fff;
-  max-width: 960px;
-  position: fixed;
   width: 100%;
+  padding: 0 50px;
+  position: fixed;
   z-index: 100; }
 
 /* modifiers */
 header.border_b nav {
-  border-bottom: 2px solid #1f1f1f; }
+  border-bottom: 1px solid #1f1f1f; }
 
 .color_negative header {
   background-color: #000; }
@@ -369,8 +369,12 @@ header.border_b nav {
 
 /* ---------- navigation */
 nav {
-  margin: 0 auto;
-  max-width: 960px; }
+  margin: 0 auto; }
+
+nav ul {
+  margin: 0 auto !important;
+  max-width: 960px;
+  width: 100%; }
 
 nav a {
   display: block;
@@ -435,6 +439,11 @@ footer .indent {
 /* ---------------------------------------- Page ---------------------------------------- */
 .container_page {
   padding: 120px 60px 30px;
+  position: relative;
+  z-index: 10; }
+
+.container_info {
+  padding: 96px 0 0;
   position: relative;
   z-index: 10; }
 
@@ -559,6 +568,8 @@ footer .indent {
   color: #ff8600; }
 [data-exhibition-placeholder] .red {
   color: #ff0000; }
+[data-exhibition-placeholder] .gold {
+  color: #FFD700; }
 
 /* ---------- Link colors */
 /* orange */
@@ -583,6 +594,11 @@ footer .indent {
 .red:hover,
 .red:focus {
   color: #ff0000;
+  text-decoration: none; }
+
+.gold:hover,
+.gold:focus {
+  color: #FFD700;
   text-decoration: none; }
 
 /* ---------------------------------------- Forms ---------------------------------------- */
@@ -825,7 +841,9 @@ button.center {
 
 .hero_caption {
   margin: 0 auto;
-  max-width: 520px; }
+  max-width: 520px;
+  -webkit-transform: translateY(0);
+  transform: translateY(0); }
 
 .hero_caption p {
   margin-bottom: 0; }
@@ -872,6 +890,18 @@ button.center {
 [class*="pos_"] {
   position: absolute;
   z-index: 10; }
+  [class*="pos_"] a {
+    position: relative; }
+    [class*="pos_"] a:hover, [class*="pos_"] a:focus {
+      text-decoration: none; }
+      [class*="pos_"] a:hover::after, [class*="pos_"] a:focus::after {
+        background-color: #1f1f1f;
+        content: '';
+        height: 1px;
+        position: absolute;
+        bottom: -2px;
+        left: 10px;
+        right: 0; }
 
 .pos_b_l,
 .pos_b_r {
@@ -922,6 +952,18 @@ button.center {
   margin-left: -50%;
   white-space: nowrap; }
 
+[data-position-update] {
+  opacity: 0;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-transition: opacity 150ms ease-out;
+  -moz-transition: opacity 150ms ease-out;
+  -o-transition: opacity 150ms ease-out;
+  transition: opacity 150ms ease-out; }
+  [data-position-update].is_visible {
+    opacity: 1; }
+
 /* ---------------------------------------- Carousel ---------------------------------------- */
 .carousel {
   height: 560px;
@@ -938,7 +980,8 @@ button.center {
   width: 100%; }
 
 .swiper-slide {
-  cursor: pointer; }
+  cursor: pointer;
+  width: 100%; }
 
 .swiper-slide::before {
   content: "";
@@ -997,6 +1040,46 @@ button.center {
 
 .swiper-direction-prev {
   background-image: url("data:image/svg+xml;charset=US-ASCII,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22utf-8%22%3F%3E%0D%0A%3C%21--%20Generator%3A%20Adobe%20Illustrator%2017.1.0%2C%20SVG%20Export%20Plug-In%20.%20SVG%20Version%3A%206.00%20Build%200%29%20%20--%3E%0D%0A%3C%21DOCTYPE%20svg%20PUBLIC%20%22-//W3C//DTD%20SVG%201.1//EN%22%20%22http%3A//www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd%22%3E%0D%0A%3Csvg%20version%3D%221.1%22%20id%3D%22Layer_1%22%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20xmlns%3Axlink%3D%22http%3A//www.w3.org/1999/xlink%22%20x%3D%220px%22%20y%3D%220px%22%0D%0A%09%20width%3D%2220px%22%20height%3D%2210.1px%22%20viewBox%3D%225%202.5%2020%2010.1%22%20enable-background%3D%22new%205%202.5%2020%2010.1%22%20xml%3Aspace%3D%22preserve%22%3E%0D%0A%3Cg%3E%0D%0A%09%3Cpath%20d%3D%22M25%2C8.9c-5%2C0-9.9%2C0-15%2C0c0%2C1.3%2C0%2C2.5%2C0%2C3.7c-1.7-1.7-3.4-3.5-5-5.1c1.6-1.6%2C3.3-3.3%2C5-5c0%2C1.1%2C0%2C2.4%2C0%2C3.7c5%2C0%2C10%2C0%2C15%2C0%0D%0A%09%09C25%2C7.1%2C25%2C7.9%2C25%2C8.9z%22/%3E%0D%0A%3C/g%3E%0D%0A%3C/svg%3E%0D%0A"); }
+
+iframe {
+  vertical-align: middle; }
+
+.info_panel {
+  height: calc(50vh - 48px); }
+  .info_panel.dark {
+    background-color: #000; }
+
+.info_panel .wrapper {
+  display: table;
+  height: 100%;
+  width: 800px; }
+
+.info_panel .wrapper p {
+  display: table-cell;
+  font-size: 2.6em;
+  font-family: "AvenirHeavy", Helvetica, Arial, sans-serif;
+  vertical-align: middle; }
+
+.info_panel.dark p {
+  color: #fff; }
+
+.info_panel a {
+  position: relative; }
+  .info_panel a::after {
+    bottom: -2px;
+    content: '';
+    left: 0;
+    height: 3px;
+    background: #1f1f1f;
+    position: absolute;
+    width: 100%; }
+  .info_panel a:hover, .info_panel a:focus {
+    text-decoration: none; }
+
+span.large {
+  font-size: 3.125em;
+  line-height: 1.3;
+  font-family: "AvenirHeavy", Helvetica, Arial, sans-serif; }
 
 /* OOCSS and utilities */
 /* -------------------- Margin */
